<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/download"
    android:orientation="vertical"
    tools:context=".RegisterActivity"
    android:backgroundTint="#99FFFFFF"
    android:backgroundTintMode="src_over">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/createAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/createAccount"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/lblName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/lblName"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/editName"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textSize="25sp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/lblEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/lblEmail"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/editEmail"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textSize="25sp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/lblPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/lblPw"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/editPassword"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textSize="25sp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/lblAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/lblAdd1"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/editAddress"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="25sp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/lblCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/lblCity"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/editCity"
                android:importantForAutofill="no"
                android:inputType="textAutoComplete"
                android:textSize="25sp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/lblProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/lblProvince"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/editProvince"
                android:importantForAutofill="no"
                android:inputType="textAutoComplete"
                android:textSize="25sp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/lblCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/lblCountry"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/editCountry"
                android:text="@string/defaultCountry"
                android:importantForAutofill="no"
                android:inputType="textAutoComplete"
                android:textSize="25sp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/lblZip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/lblZip"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editZip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/editZip"
                android:importantForAutofill="no"
                android:inputType="textPostalAddress"
                android:textSize="25sp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/errorMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text=""
        android:textColor="#FF0000"
        android:textSize="16sp" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:onClick="register"
        android:text="@string/register"
        app:cornerRadius="20dp"
        android:textSize="20sp"
        tools:ignore="TouchTargetSizeCheck" />

</LinearLayout>