<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddBookActivity"
    android:background="@drawable/download"
    android:backgroundTint="#AAFFFFFF"
    android:backgroundTintMode="src_over">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:focusableInTouchMode="false"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:touchscreenBlocksFocus="false"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/header"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:text="Add New Book"
            android:textSize="20sp"
            android:textColor="@color/white"/>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/previewImage"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:visibility="gone"/>

            <Button
                android:id="@+id/selectImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/old_rose_light"
                android:layout_gravity="center"
                android:text="@string/selectImage"
                android:onClick="chooseImage"
                android:textSize="14sp" />



            <TextView
                android:id="@+id/lblTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/lblTitle"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/editTitle"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="20sp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/lblAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/lblAuthor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/editAuthor"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="20sp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/lblYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/lblYear"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/editYear"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textSize="20sp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/lblGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/lblGenre"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/editGenre"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="20sp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/lblIsbn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/lblIsbn"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editIsbn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/editIsbn"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="20sp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/lblPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/lblPrice"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/editPrice"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textSize="20sp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />


        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/errorMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text=""
        android:textColor="#FF0000"
        android:textSize="16sp" />

    <Button
        android:id="@+id/addBook"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:onClick="addBook"
        android:text="@string/addBook"
        app:cornerRadius="20dp"
        android:textSize="20sp"
        tools:ignore="TouchTargetSizeCheck" />

</LinearLayout>