<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/download"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:text="@string/app_title_cap"
            android:textColor="@color/black"
            android:textSize="40sp"
            tools:layout_editor_absoluteX="33dp"
            tools:layout_editor_absoluteY="492dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:srcCompat="@drawable/logonew" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:onClick="login"
            android:text="@string/login"
            android:textSize="18sp"
            app:cornerRadius="20dp"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:onClick="register"
            android:text="@string/register_main"
            android:textSize="18sp"
            app:cornerRadius="20dp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>


</LinearLayout>